--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2010,7 +2010,7 @@ ul.icons {
     width: 100%;
     z-index: 1; }
   #banner:after {
-    background: linear-gradient(135deg, #b40959 0%, #111111 74%);
+    background: linear-gradient(135deg, #b40959 0%, #490a28 74%);
     content: ' ';
     display: block;
     height: 100%;
@@ -2058,10 +2058,10 @@ ul.icons {
 
 /* CTA */
 #cta {
-  background-color: #ce1b28;
+  background-color: #b40959;
   color: rgba(255, 255, 255, 0.75);
   background-attachment: fixed;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)), url(../../images/cta01.jpg);
+  background-image: linear-gradient(#b40959, rgba(255, 255, 255, 0.25)), url(../../images/cta01.jpg);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
