--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2059,10 +2059,10 @@ ul.icons {
 
 /* CTA */
 #cta {
-  background-color: #b40959;
+  background-color: #ffffff;
   color: rgba(255, 255, 255, 0.75);
   background-attachment: fixed;
-  background-image: linear-gradient(#b40959, rgba(255, 255, 255, 0.25)), url(../../images/cta01.jpg);
+  background-image: linear-gradient(#ffffff, rgba(255, 255, 255, 0.25)), url(../../images/cta01.jpg);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
